--- a/bundler-nsdi20.tex
+++ b/bundler-nsdi20.tex
@@ -12,8 +12,7 @@
 \setlength{\droptitle}{-1.5cm}
 
 \title{\LARGE Taking Control of Your Traffic By Living on the Edge}
-% TODO MAKE FINAL ANON
-\author{Paper XXX, Y+Z Pages}
+\author{Paper 45, \pageref{p:end} Pages}
 % TODO MAKE FINAL
 %Frank Cangialosi, 
 %Akshay Narayan, 
@@ -27,11 +26,9 @@
 
 \maketitle
 
-% TODO maybe not?
 \begin{sloppypar}
 \input{abstract}
 \input{intro}
-\input{related}
 \input{deployment}
 \input{design}
 \input{measure}
@@ -39,12 +36,11 @@
 \input{impl}
 \input{eval}
 \input{discussion}
+\input{related}
 \input{conclusion}
-% TODO maybe not?
 \end{sloppypar}
 \label{p:end}
 \clearpage
 \bibliographystyle{abbrv}
-% TODO? \bibliographystyle{plain}
 \bibliography{ref}
 \end{document}
